--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>hello world</h1>
-<p1>Shahab is my cousin my name is milad</p1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <h1>Hello world my friend</h1>
+
+
+</body>
+</html>
