--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
           <td class="mainRow">in Process</td>
           <td class="mainRow">783$</td>
         </tr>
+        <tr >
+          <td class="mainRow">xch_fwyMxkyGoDi3Sr3</td>
+          <td class="mainRow">1000$</td>
+          <td class="mainRow">DOne</td>
+          <td class="mainRow">268$</td>
+        </tr>
+         <tr >
+          <td class="mainRow">xch_6hiN5HIVEwMnp7a</td>
+          <td class="mainRow">8452$</td>
+          <td class="mainRow">Pending</td>
+          <td class="mainRow">0$</td>
+        </tr>
       </table>
 
 </body>
