--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
     <table>
         <tr >
           <th class="mainHeader">TrackOrderID</th>
+          <th class="mainHeader">Direction</th>
           <th class="mainHeader">Total Amount</th>
           <th class="mainHeader">Status</th>
           <th class="mainHeader">Paid Amount</th>
         </tr>
         <tr >
           <td class="mainRow">xch_F5qXM0EHfCwf2mA</td>
+          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
           <td class="mainRow">2000$</td>
           <td class="mainRow">in Process</td>
           <td class="mainRow">783$</td>
         </tr>
         <tr >
           <td class="mainRow">xch_fwyMxkyGoDi3Sr3</td>
+          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
           <td class="mainRow">1000$</td>
-          <td class="mainRow">DOne</td>
+          <td class="mainRow">Done</td>
           <td class="mainRow">268$</td>
         </tr>
          <tr >
           <td class="mainRow">xch_6hiN5HIVEwMnp7a</td>
+          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
           <td class="mainRow">8452$</td>
           <td class="mainRow">Pending</td>
           <td class="mainRow">0$</td>
