--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     
     <table>
         <tr >
-          <th class="mainHeader">TrackOrderID</th>
-          <th class="mainHeader">Direction</th>
-          <th class="mainHeader">Total Amount</th>
-          <th class="mainHeader">Status</th>
-          <th class="mainHeader">Paid Amount</th>
+          <th class="mainHeader"><b>TrackOrderID</b></th>
+          <th class="mainHeader"><b>Direction</b></th>
+          <th class="mainHeader"><b>Total Amount</b></th>
+          <th class="mainHeader"><b>Status</b></th>
+          <th class="mainHeader"><b>Paid Amount</b></th>
         </tr>
         <tr >
           <td class="mainRow">xch_F5qXM0EHfCwf2mA</td>
           <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
-          <td class="mainRow">2000$</td>
+          <td class="mainRow" >2000$</td>
           <td class="mainRow">in Process</td>
           <td class="mainRow">783$</td>
         </tr>
