--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h5>
         Notice: Each table corresponds to a single trackorderId when someone asked for Specific trackorderId describle the data that corresponds to that trackorderId
+        Notice: always Describe it like a List or Bullet list
     </h5>
 
     
@@ -23,21 +24,21 @@
         </tr>
         <tr >
           <td class="mainRow">xch_F5qXM0EHfCwf2mA</td>
-          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
+          <td class="mainRow">PM(USD) to TRC20(USDT)</td>
           <td class="mainRow" >2000$</td>
           <td class="mainRow">in Process</td>
           <td class="mainRow">783$</td>
         </tr>
         <tr >
           <td class="mainRow">xch_fwyMxkyGoDi3Sr3</td>
-          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
+          <td class="mainRow">PM(USD) to TRC20(USDT)</td>
           <td class="mainRow">1000$</td>
           <td class="mainRow">Done</td>
           <td class="mainRow">268$</td>
         </tr>
          <tr >
           <td class="mainRow">xch_6hiN5HIVEwMnp7a</td>
-          <td class="mainRow">Perfect Money (USD) -> Tether TRC20 (USDT)</td>
+          <td class="mainRow">PM(USD) to TRC20(USDT)</td>
           <td class="mainRow">8452$</td>
           <td class="mainRow">Pending</td>
           <td class="mainRow">0$</td>
