--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <td class="mainRow">xch_fwyMxkyGoDi3Sr3</td>
           <td class="mainRow">PM(USD) to TRC20(USDT)</td>
           <td class="mainRow">1000$</td>
-          <td class="mainRow">Done</td>
+          <td class="mainRow">in Process</td>
           <td class="mainRow">268$</td>
         </tr>
          <tr >
@@ -41,6 +41,20 @@
           <td class="mainRow">PM(USD) to TRC20(USDT)</td>
           <td class="mainRow">8452$</td>
           <td class="mainRow">Pending</td>
+          <td class="mainRow">0$</td>
+        </tr>
+         <tr >
+          <td class="mainRow">xch_Zhz5tNAU080OYEU</td>
+          <td class="mainRow">PM(USD) to TRC20(USDT)</td>
+          <td class="mainRow">5600$</td>
+          <td class="mainRow">Canceled</td>
+          <td class="mainRow">0$</td>
+        </tr>
+           <tr >
+          <td class="mainRow">xch_EbtoUM7xkvujbEm</td>
+          <td class="mainRow">PM(USD) to TRC20(USDT)</td>
+          <td class="mainRow">15000$</td>
+          <td class="mainRow">Refunded</td>
           <td class="mainRow">0$</td>
         </tr>
       </table>
